--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,29 @@ set(CMAKE_CXX_STANDARD 17)
 
 enable_language(ASM)
 
-add_library(coco STATIC
+add_library(coco_base STATIC
     coco/make_fcontext.S
     coco/jump_fcontext.S
-    coco/context.cpp
-    coco/fiber.cpp
     coco/scheduler.cpp
+    coco/event/dispatcher.cpp
 )
-target_link_libraries(coco pthread)
+target_link_libraries(coco_base pthread)
+
+add_library(coco_hook STATIC
+    coco/hook/fdhook.cpp
+    coco/hook/utility.cpp
+    coco/hook/init.cpp
+    coco/hook/sys/socket.cpp
+    coco/hook/sys/accept.cpp
+    coco/hook/sys/connect.cpp
+    coco/hook/sys/read.cpp
+    coco/hook/sys/write.cpp
+    coco/hook/sys/recv.cpp
+    coco/hook/sys/send.cpp
+)
+target_link_libraries(coco_hook dl coco_base)
 
 add_executable(test
     coco/test.cpp
 )
-target_link_libraries(test coco)
+target_link_libraries(test coco_base coco_hook)
